
1.2.1:
Paul Jenner - Sat, 14 Apr 2001 09:20:38 -0700 (PDT)
 * Added support for building RPM directly from tar archive

1.2.0:
Sam Lantinga - Wed Apr  4 12:42:20 PDT 2001
 * Synchronized release version with SDL 1.2.0

1.1.1:
John Hall - Tue Jan  2 13:46:54 PST 2001
 * Added support to playmus for track switching with Ctrl-C
 * Added support to playmus for multiple command line files

1.1.0:
Sam Lantinga - Wed Nov 29 20:47:13 PST 2000
 * Package specifically for SDL 1.1 (no real reason API-wise, but for clarity)

1.0.7:
Sam Lantinga - Tue Nov  7 10:22:09 PST 2000
 * Fixed hang in mikmod re-initialization
Stephane Peter - Oct 17 13:07:32 PST 2000
 * Fixed music fading
Ray Kelm - Fri, 04 Aug 2000 20:58:00 -0400
 * Added support for cross-compiling Windows DLL from Linux

1.0.6:
Sam Lantinga - Sun Jul  2 14:16:44 PDT 2000
 * Added support for the Ogg Vorbis music format: http://www.vorbis.org/
Darrell Walisser - Wed Jun 28 11:59:40 PDT 2000
 * Added Codewarrior projects for MacOS
Sam Lantinga - Mon Jun 26 12:01:11 PDT 2000
 * Fixed symbol aliasing problem with "channel"
Matt - Wed, 12 Apr 2000 15:36:13 -0700
 * Added SDL_RWops support for mikmod loading (not hooked into music.c yet)

1.0.5:
Paul Furber - Fri Mar  3 14:58:50 PST 2000
 * Fixed MP3 detection with compilers that use signed char datatypes

1.0.4:
Sam Lantinga - Thu Feb 10 19:42:03 PST 2000
 * Ported the base mixer and mikmod libraries to MacOS
Markus Oberhumer - Wed Feb  2 13:16:17 PST 2000
 * Fixed problem with short looping sounds
Sam Lantinga - Tue Feb  1 13:25:44 PST 2000
 * Added Visual C++ project file
Markus Oberhumer - Tue Feb  1 13:23:11 PST 2000
 * Cleaned up code for compiling with Visual C++
 * Don't hang in Mix_HaltMusic() if the music is paused
Sam Lantinga - Fri Jan 28 08:54:56 PST 2000
 * Fixed looping WAVE chunks that are not aligned on sample boundaries

1.0.3:
Sam Lantinga - Mon Jan 17 19:48:09 PST 2000
 * Changed the name of the library from "mixer" to "SDL_mixer"